Blend from Shape "add" mode does it wrong #31994

Closed
opened 2012-07-02 23:24:24 +02:00 by Tobias Oelgarte · 7 comments

%%%Lets asume i have two shape keys (basis, key1) and i create a third shape key (key2) that equals the basis shape key. If i now select key 2, go to edit mode and use "Blend from Shape" (W-menu) and select key1 together with "add" as the option then it should add the difference between basis and key1 (key1 minus basis) to the vertices of key2. But instead it adds key1 without subtracting the basis, producing a mesh of roughly the double size.

I appended an example file with the keys set up. If you now press W, select "Blend from Shape" and choose "key1" as the target, then you will have a large cube. If done right then the key2 should equal key1 in this scenario (assuming "Blend"=1.0).%%%

%%%Lets asume i have two shape keys (basis, key1) and i create a third shape key (key2) that equals the basis shape key. If i now select key 2, go to edit mode and use "Blend from Shape" (W-menu) and select key1 together with "add" as the option then it should add the difference between basis and key1 (key1 minus basis) to the vertices of key2. But instead it adds key1 without subtracting the basis, producing a mesh of roughly the double size. I appended an example file with the keys set up. If you now press W, select "Blend from Shape" and choose "key1" as the target, then you will have a large cube. If done right then the key2 should equal key1 in this scenario (assuming "Blend"=1.0).%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Joshua, AFAIR you're quite familiar with shape keys and probably could help us with this report? Thanks!%%%

%%%Joshua, AFAIR you're quite familiar with shape keys and probably could help us with this report? Thanks!%%%
Member

%%%Actually, I'm not that familiar with some of these tools, or some of the rationale behind how they currently work. Anyways, here goes...

From my experiments so far, it seems that if you disable 'Add' (i.e. make it just blend between the coordinates of the mesh as they currently stand, and the corresponding locations as directed by the shapekey), you should get what you were wanting. Then again, maybe this only applies for this particular case, since there are no existing changes on this mesh that we want to preserve. Otherwise, blending between these meshes could have the unanticipated consequence of wiping out some of the desired features of the existing shape while trying to introduce some useful features from another shape.

I guess it's more common for users to assume that shapekeys only store the deltas per vertex as opposed to actually being full copies of the mesh. Admittedly I remember being surprised about that myself when I first learnt about this. So I guess there is a case here for just adding the deltas.%%%

%%%Actually, I'm not that familiar with some of these tools, or some of the rationale behind how they currently work. Anyways, here goes... From my experiments so far, it seems that if you disable 'Add' (i.e. make it just blend between the coordinates of the mesh as they currently stand, and the corresponding locations as directed by the shapekey), you should get what you were wanting. Then again, maybe this only applies for this particular case, since there are no existing changes on this mesh that we want to preserve. Otherwise, blending between these meshes could have the unanticipated consequence of wiping out some of the desired features of the existing shape while trying to introduce some useful features from another shape. I guess it's more common for users to assume that shapekeys only store the deltas per vertex as opposed to actually being full copies of the mesh. Admittedly I remember being surprised about that myself when I first learnt about this. So I guess there is a case here for just adding the deltas.%%%
Member

%%%Ok, looks like we have a regression!

Just checked a pre-bmesh source file and it seems that we lost some functionality along the way. Fixit time!%%%

%%%Ok, looks like we have a regression! Just checked a pre-bmesh source file and it seems that we lost some functionality along the way. Fixit time!%%%
Member

%%%Fixed in svn.%%%

%%%Fixed in svn.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Thank you. Works perfect now. But I'm also wondering why the absolute values are used/stored instead of the relative values. I would assume that it could decrease file size (a lot of zeros) and increase performance during animations (no need to compute difference with basis) if it was stored relative.%%%

%%%Thank you. Works perfect now. But I'm also wondering why the absolute values are used/stored instead of the relative values. I would assume that it could decrease file size (a lot of zeros) and increase performance during animations (no need to compute difference with basis) if it was stored relative.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31994
No description provided.