Bugfix [#31994] Blend from Shape "Add" mode incorrectly added the full mesh shape instead of just the difference/deltas applied by the source shape

Apparently this was a regression from that crept in during the BMesh merge. I've
just restored the pre-BMesh method, adapted for the BMesh style.

Also, removed a somewhat superfluous (?) copy at the end of each step (from co
back to sco). It didn't seem to be serving any purpose (i.e. we're not trying to
modify the source shape at all).